fixed linebreak on title

--- a/public/styles/_03base.scss
+++ b/public/styles/_03base.scss
@@ -16,6 +16,11 @@ body{
   }
 }
 
+.name{
+	br{
+		display:none;
+	}
+}
 
 @media only screen and (max-width: 900px) {
   .card-action{
